--- a/playbook.yml
+++ b/playbook.yml
@@ -86,8 +86,8 @@
         dest: "~/.oh-my-zsh/plugins/zsh-syntax-highlighting"
 
     - name: Check for ~/dotfiles
-      slurp:
-        stat: ~/dotfiles
+      stat:
+        path: ~/dotfiles
       register: oldPath
 
     - name: Migrate ~/dotfiles -> ~/.dotfiles
