updated to new syntax + terra for fedora

--- a/playbook.yml
+++ b/playbook.yml
@@ -12,44 +12,62 @@
 
     # - name: "[1/4] Eza - Install gpg (Debian/Ubuntu)"
     #   become: true
-    #   when: ansible_distribution_file_variety is defined and ansible_distribution_file_variety == "Debian"
+    #   when: ansible_facts['distribution_file_variety'] is defined and ansible_facts['distribution_file_variety'] == "Debian"
     #   package:
     #     name: gpg
     #     state: present
     # - name: "[2/4] Eza - Create keyrings folder (Debian/Ubuntu)"
     #   become: true
-    #   when: ansible_distribution_file_variety is defined and ansible_distribution_file_variety == "Debian"
+    #   when: ansible_facts['distribution_file_variety'] is defined and ansible_facts['distribution_file_variety'] == "Debian"
     #   file:
     #     path: /etc/apt/keyrings/
     #     state: directory
     # - name: "[3/4] Eza - Add GPG key (Debian/Ubuntu)"
     #   become: true
-    #   when: ansible_distribution_file_variety is defined and ansible_distribution_file_variety == "Debian"
+    #   when: ansible_facts['distribution_file_variety'] is defined and ansible_facts['distribution_file_variety'] == "Debian"
     #   apt_key:
     #     url: https://raw.githubusercontent.com/eza-community/eza/main/deb.asc
     #     keyring: /etc/apt/keyrings/gierens.gpg
     #     state: present
     # - name: "[4/4] Eza - Add repo (Debian/Ubuntu)"
     #   become: true
-    #   when: ansible_distribution_file_variety is defined and ansible_distribution_file_variety == "Debian"
+    #   when: ansible_facts['distribution_file_variety'] is defined and ansible_facts['distribution_file_variety'] == "Debian"
     #   apt_repository:
     #     repo: deb [signed-by=/etc/apt/keyrings/gierens.gpg] http://deb.gierens.de stable main
     #     state: present
 
+    - name: Add terra repository
+      become: true
+      when: ansible_facts['distribution'] == "Fedora" and ansible_facts['distribution_major_version'] | int >= 41
+      ansible.builtin.yum_repository:
+        name: terra
+        description: Terra Repository
+        baseurl: "https://repos.fyralabs.com/terra{{ ansible_facts['distribution_major_version'] }}"
+        gpgcheck: no
+        enabled: yes
+        state: present
+
+    - name: Install terra-release
+      become: true
+      when: ansible_facts['distribution'] == "Fedora" and ansible_facts['distribution_major_version'] | int >= 41
+      ansible.builtin.dnf5:
+        name: terra-release
+        state: present
+
     - name: Install packages
-      when: ansible_distribution != "MacOSX"
+      when: ansible_facts['distribution'] != "MacOSX"
       become: true
       package:
         name: "{{ packages }}"
         state: present
 
     - name: Install packages (macOS)
-      when: ansible_distribution == "MacOSX"
+      when: ansible_facts['distribution'] == "MacOSX"
       package:
         name: "{{ packages }}"
         state: present
 
-    - name: Configure Oh My Zsh for {{ ansible_user_id }}
+    - name: Configure Oh My Zsh for {{ ansible_facts['user_id'] }}
       include_role:
         name: gantsign.oh-my-zsh
       vars:
